--- a/readme
+++ b/readme
@@ -4,21 +4,21 @@
     3、添加空集群直接使用add参数即可，自动选举master并同步
     4、宕机恢复的master如需恢复到集群中提供业务支持，执行my_mha中的setha以增加信息到路由端，如不恢复到集群中在下次master
        宕机切换时也可以自动作为活跃主机添加
-    5、当前mysql有多个同步线程，需添加附加任务，在addition节点下先插入对应数据
+    5、当mysql有多个同步线程，需添加附加任务，在addition节点下先插入对应数据
 
 功能：
-    1、宕机切换，同步mysqlrouter配置文件
-    2、宕机节点半自动恢复到集群中，需人为判断宕机恢复之后的节点是否能合理的提供业务查询，避免查询出错误的数据
-    3、前端使用mysqlrouter作为路由，实时监听配置修改并同步于配置文件，实现业务透明化并提供读的负载
+    1、宕机切换，同步haproxy配置项
+    2、宕机节点自动恢复到可查询的节点中，如服务器宕机或服务端未成功追加数据将回滚未同步数据并保留正常sql以备人工操作
+    3、前端使用haproxy作为路由，实时监听配置修改并同步于配置文件，实现业务透明化并提供读的负载
     4、因网络波动造成的心跳丢失会连续尝试数据库服务连接，如正常将不会发生切换并发出告警信息通知管理员
-    5、管理端集群化，避免单节点故障
-    6、mysqlrouter路由配置需使用附加文件(-a)，附加配置文件名和groupname一样，read_write模块命名规范为[routing:rw],read_only模块命名规范为[routing:ro]
-        只会对该两个模块的destinations做修改，其他配置项请按需配置，配置文件必须在/etc/mysqlrouter目录下
+    5、管理端节点可集群化，可避免单节点故障
+    6、haproxy路由配置需使用read、write实现端口读写分离并读负载均衡，配置文件名和groupname一样，配置文件必须在/etc/mysqlrouter目录下
+    7、宕机切换时服务端会链接检查是mysql宕机还是服务器宕机、如mysql宕机会向mysql所在服务器的客户端发送追加未同步数据的请求，追加新master
 
 不支持项：
     1、不支持多通道复制，只能以附加业务的方式指定
     2、不支持多点写入
-    3、宕机binlog追加及恢复数据回滚操作，需人为判断
+    3、未平台化，操作基本以my_mha.py的脚步方式执行
 
 注意事项：
     1、第一次启动需先启动server初始化zookeeper信息，再启动每个mysql端的心跳线程，最后执行my_mha相关项
@@ -54,4 +54,5 @@
     4、在所有mysql节点部署mha_client创建心跳
     5、部署mysqlrouter并开启router.py打开端口
     6、执行my_mha中的各项
+    7、最后启动各服务端
 
