--- a/readme
+++ b/readme
@@ -1,9 +1,11 @@
 背景：
-    由于公司架构需求直接奔多dc架构而去，这样会导致集群节点会很多，一个机房5台我们整个业务就需要25台，如果用常用的mha或者双主+VIP的方式会导致维护性
-    变繁琐，如果使用mha一套业务就需部署一套服务，而且不能完全避免单点故障，如果使用VIP加双主这就不得不提脑裂，在曾经的工作中使用VIP加双主遇到过一个
-    很奇怪的故障，服务器任何tcp链接都进不去但是keepalived的心跳协议却通常，导致没有正常切换，这让我有心里阴影，再有我们根据业务把数据隔离，需要跨dc
-    同步的数据会少很多，决定采用原生的同步加ssh加密的方式解决，所以在这个需求上又需要另外的脚步来控制宕机切换之后的跨区域同步更换，在经过网上搜索调研
-    过后决定自主开发一套能满足我们所有需求的高可用框架，于是就有了这个基于zk管理配置文件的高可用工具
+    由于公司架构需求直接奔多dc架构而去，这样会导致集群节点会很多，一个机房5台我们整个业务就需要25台，如果用常用
+    的mha或者双主+VIP的方式会导致维护性变繁琐，如果使用mha一套业务就需部署一套服务，而且不能完全避免单点故障，
+    如果使用VIP加双主这就不得不提脑裂，在曾经的工作中使用VIP加双主遇到过一个很奇怪的故障，服务器任何tcp链接都
+    进不去但是keepalived的心跳协议却通常，导致没有正常切换，这让我有心里阴影，再有我们根据业务把数据隔离，需要
+    跨dc同步的数据会少很多，决定采用原生的同步加ssh加密的方式解决，所以在这个需求上又需要另外的脚步来控制宕机切
+    换之后的跨区域同步更换，在经过网上搜索调研过后决定自主开发一套能满足我们所有需求的高可用框架，于是就有了这个
+    基于zk管理配置文件的高可用工具
 
 操作实现：
     1、手动对集群进行维护时需先对该集群设置白名单（white）,操作完成后直接设置白名单任务（task）让server获取新master并监听
