--- a/readme
+++ b/readme
@@ -1,3 +1,18 @@
+背景:
+	由于我们业务需求要实现多DC架构，在设计最初考虑过使用mha、双master架构，这些都能满足大部分业务需求，但在多机房的情况下管理起来会很繁琐
+	一套业务一套系统，有多少个dc就直接翻多少倍，每套都要做检查，且mha在不修改源码的情况下不能做持续性的维护，切一次需要重启一次，服务端还
+	存在单点的情况，而双master就必然引入VIP，这有可能会出现脑裂，还有在以前的维护中我们的双master+vip的架构出现过keepalived协议通，服务器
+	tcp协议不通的情况，这导致了不能正常切换使我心有余悸，基于上面这些问题考虑，我们需要去除单点问题，维护性要简便且服务端要可持续性，还有
+	需要能管理跨dc数据同步的问题，经过调研决定开发一套基于zk管理配置的高可用管理框架，就是这套系统，目前在我们系统正常跑着暂无问题
+
+功能：
+	1、前端使用haproxy做路由端，后端切换是业务层无感知
+    2、通过zk同步配置文件，在路由端启动一个client实时监听路由变化
+    3、master宕机切换可实现未同步数据追加及回滚，回滚的数据记录到本地目录已备人为判断是否需要
+    4、因网络波动造成的心跳丢失会连续尝试数据库服务连接，如正常将不会发生切换并发出告警信息通知管理员
+    5、服务端、路由端都可以集群化避免单点故障
+    6、haproxy通过配置不同的机群组名称辨别，统一配置文件通过read、write实现读写的端口分离
+		
 操作实现：
     1、手动对集群进行维护时需先对该集群设置白名单（white）,操作完成后直接设置白名单任务（task）让server获取新master并监听
     2、如master监听丢失但重试连接mysql成功，server不会发生切换操作，会在watch-down节点写写入该集群信息，以供报警作用
@@ -6,19 +21,12 @@
        宕机切换时也可以自动作为活跃主机添加
     5、当前mysql有多个同步线程，需添加附加任务，在addition节点下先插入对应数据
 
-功能：
-    1、宕机切换，同步mysqlrouter配置文件
-    2、宕机节点半自动恢复到集群中，需人为判断宕机恢复之后的节点是否能合理的提供业务查询，避免查询出错误的数据
-    3、前端使用mysqlrouter作为路由，实时监听配置修改并同步于配置文件，实现业务透明化并提供读的负载
-    4、因网络波动造成的心跳丢失会连续尝试数据库服务连接，如正常将不会发生切换并发出告警信息通知管理员
-    5、管理端集群化，避免单节点故障
-    6、mysqlrouter路由配置需使用附加文件(-a)，附加配置文件名和groupname一样，read_write模块命名规范为[routing:rw],read_only模块命名规范为[routing:ro]
-        只会对该两个模块的destinations做修改，其他配置项请按需配置，配置文件必须在/etc/mysqlrouter目录下
 
 不支持项：
     1、不支持多通道复制，只能以附加业务的方式指定
-    2、不支持多点写入
-    3、宕机binlog追加及恢复数据回滚操作，需人为判断
+    2、不支持mysql的多点写入
+    3、未平台化，操作基本使用my_mha.py脚本实现
+	4、未对null做优化，如果数据库字段存在null的情况，在回滚、追加数据时会报错
 
 注意事项：
     1、第一次启动需先启动server初始化zookeeper信息，再启动每个mysql端的心跳线程，最后执行my_mha相关项
