--- a/readme
+++ b/readme
@@ -1,17 +1,20 @@
 背景:
-	由于我们业务需求要实现多DC架构，在设计最初考虑过使用mha、双master架构，这些都能满足大部分业务需求，但在多机房的情况下管理起来会很繁琐
-	一套业务一套系统，有多少个dc就直接翻多少倍，每套都要做检查，且mha在不修改源码的情况下不能做持续性的维护，切一次需要重启一次，服务端还
-	存在单点的情况，而双master就必然引入VIP，这有可能会出现脑裂，还有在以前的维护中我们的双master+vip的架构出现过keepalived协议通，服务器
-	tcp协议不通的情况，这导致了不能正常切换使我心有余悸，基于上面这些问题考虑，我们需要去除单点问题，维护性要简便且服务端要可持续性，还有
-	需要能管理跨dc数据同步的问题，经过调研决定开发一套基于zk管理配置的高可用管理框架，就是这套系统，目前在我们系统正常跑着暂无问题
+    由于我们业务需求要实现多DC架构，在设计最初考虑过使用mha、双master架构，这些都能满足大部分业务需求，
+    但在多机房的情况下管理起来会很繁琐一套业务一套系统，有多少个dc就直接翻多少倍，每套都要做检查，且mha
+    在不修改源码的情况下不能做持续性的维护，切一次需要重启一次，服务端还存在单点的情况，而双master就必
+    然引入VIP，这有可能会出现脑裂，还有在以前的维护中我们的双master+vip的架构出现过keepalived协议通，
+    服务器tcp协议不通的情况，这导致了不能正常切换使我心有余悸，基于上面这些问题考虑，我们需要去除单点问
+    题，维护性要简便且服务端要可持续性，还有需要能管理跨dc数据同步的问题，经过调研决定开发一套基于zk管
+    理配置的高可用管理框架，就是这套系统，目前在我们系统正常跑着暂无问题
 
 功能：
-	1、前端使用haproxy做路由端，后端切换是业务层无感知
+    1、前端使用haproxy做路由端，后端切换是业务层无感知
     2、通过zk同步配置文件，在路由端启动一个client实时监听路由变化
     3、master宕机切换可实现未同步数据追加及回滚，回滚的数据记录到本地目录已备人为判断是否需要
     4、因网络波动造成的心跳丢失会连续尝试数据库服务连接，如正常将不会发生切换并发出告警信息通知管理员
     5、服务端、路由端都可以集群化避免单点故障
     6、haproxy通过配置不同的机群组名称辨别，统一配置文件通过read、write实现读写的端口分离
+    7、检测slave是否在线，如不在线将从读列表中去除，后期将加入延迟检测，超过阈值剔除
 		
 操作实现：
     1、手动对集群进行维护时需先对该集群设置白名单（white）,操作完成后直接设置白名单任务（task）让server获取新master并监听
@@ -26,7 +29,6 @@
     1、不支持多通道复制，只能以附加业务的方式指定
     2、不支持mysql的多点写入
     3、未平台化，操作基本使用my_mha.py脚本实现
-	4、未对null做优化，如果数据库字段存在null的情况，在回滚、追加数据时会报错
 
 注意事项：
     1、第一次启动需先启动server初始化zookeeper信息，再启动每个mysql端的心跳线程，最后执行my_mha相关项
